Estilos de botones, correcciones

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h3 {
     width: 40%;
 }
 
-.small {
+.img-small {
     margin-top: 30px;
     width: 70%;
 }
@@ -64,14 +64,60 @@ input {
     margin: 25px 0;
     padding: 12px;
 }
-
-button {
+button,a{
     border: none;
     border-radius: 5px;
-    box-shadow: 3px 3px 3px #bd8030;
     padding: 12px;
     font-size: 16px;
     cursor: pointer;
+    outline: none;
+}
+a{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    padding: 5px;
+    width: 130px;
+    height: 50px;
+    background-color: white;
+    box-shadow: 1px 1px 7px #58585852;
+}
+.logos{
+    width: 70%;
+}
+
+
+.buttons-2{
+    display: flex;
+}
+
+#btn-verify {
+    box-shadow: 3px 3px 3px #bd8030;
+    transition-duration: 250ms;
+}
+#btn-verify:hover {
+    background-color:  #574426;
+    color: white;
+}
+
+#btn-verify:focus{
+    background-color:  #302617;
+    color: white;
+}
+
+.btn-close{
+    margin-top: 15px;
+    box-shadow: 3px 3px 3px #727272;
+}
+.btn-close:hover{
+    transition-duration: 250ms;
+    background-color:#ffa411;
+    color: white;
+}
+.btn-close:focus{
+    transition-duration: 0s;
+    background-color:  #a1690f;
+    color: white;
 }
 
 .background {
@@ -92,24 +138,26 @@ button {
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
+    width: 50%;
+    max-width: 600px;
     height: 400px;
     padding: 20px;
     text-align: center;
-} 
+}
 
-.hide{
+
+.hide {
     visibility: hidden;
 }
 
-#message{
+#message {
     font-weight: 400;
     padding: 15px;
 }
 
-#notification-close{
+.notification-close {
     cursor: pointer;
-    position: absolute ;
-    right: 30px; 
-    font-size: 22px;  
+    position: absolute;
+    right: 30px;
+    font-size: 22px;
 }
