--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 .main {
     display: flex;
     width: 100%;
-
 }
 
 h1 span {
@@ -35,7 +34,7 @@ h3 {
 
 .square {
     flex-basis: 100%;
-    height: 700px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -133,13 +132,13 @@ a{
     background-color: white;
     border-radius: 10px;
     position: absolute;
-    top: 150px;
+    top: 100px;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    max-width: 600px;
+    max-width: 500px;
     height: 400px;
     padding: 20px;
     text-align: center;
@@ -160,4 +159,10 @@ a{
     position: absolute;
     right: 30px;
     font-size: 22px;
+}
+
+@media (max-width: 768px) {
+    .main{
+        flex-wrap: wrap;
+    }
 }
